--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -26,7 +26,7 @@
             <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked.png">
             <div class="carousel-caption">
                 <p>
-                    Click the snake to encrypt your email.
+                    When you send to ParselTongue users, click the snake to encrypt.
                 </p>
             </div>
         </div>        
@@ -34,7 +34,7 @@
             <img class="carousel-image" src="/static/img/tutorial/gmail-locked.png">
             <div class="carousel-caption">
                 <p>
-                    Click the lock again to send your email unencrypted.
+                    Click the snake again to send your email unencrypted.
                 </p>
             </div>
         </div>
