--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -1,5 +1,5 @@
 {% load filters %}
-{% load compress %}
+{# load compress #}
 {% load staticfiles %}
 
 <!DOCTYPE html>
@@ -10,13 +10,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="/static/img/favicon.ico">
-        {% compress css %}
+        {# compress css #}
         {% include_style "css/bootstrap.min" %}
         {% include_style "css/base" %}
 
         {% block css %}
         {% endblock %}
-        {% endcompress %}
+        {# endcompress #}
 
         <meta charset="utf-8">
         <title> ParselTongue | {{ page_title }} </title>
@@ -99,7 +99,7 @@
             </div>
         </div> 
 
-        {% compress js %}
+        {# compress js #}
         
         {% include_script "js/jquery-1.10.2.min" %}
         {% include_script "js/bootstrap.min" %}
@@ -108,7 +108,7 @@
 
         {% block scripts %}
         {% endblock %}
-        {% endcompress %}
+        {# endcompress #}
 
     </body>
 </html>
