--- a/extension/templates/extension/login_prompt.html
+++ b/extension/templates/extension/login_prompt.html
@@ -6,7 +6,7 @@
     You've been logged out of ParselTongue
 </p> 
 <p class="login-container chrome">
-    <input id="allow-btn" type="button" value="Login" data-action="login" class=" btn btn-small btn-success">
-    <input id="deny-btn" type="button" value="Ignore" data-action="ignore" class="btn btn-small btn-warning">
+    <input id="allow-btn" type="button" value="Login" data-action="login" class=" btn btn-sm btn-primary">
+    <input id="deny-btn" type="button" value="Ignore" data-action="ignore" class="btn btn-sm btn-warning">
 <p>
 {% endblock %}
