--- a/extension/templates/extension/prompt_base.html
+++ b/extension/templates/extension/prompt_base.html
@@ -23,7 +23,7 @@
 <body>
 
     <div id="gritter-notice-wrapper" class="popup">
-        <div id="gritter-item-1" class="gritter-item-wrapper">
+        <div id="gritter-item-1" class="gritter-item-wrapper gritter-light">
             <div class="gritter-top"></div>
             <div class="gritter-item">
                 <div class="gritter-without-image">
