--- a/extension/templates/extension/login_prompt.html
+++ b/extension/templates/extension/login_prompt.html
@@ -3,7 +3,7 @@
 {% block content%}
 
  <p class="gritter-title">
-    You've been logged out of ParselTongue
+    Log back into ParselTongue to encrypt your emails
 </p> 
 <p class="login-container chrome">
     <input id="allow-btn" type="button" value="Login" data-action="login" class=" btn btn-sm btn-primary">
