--- a/extension/templates/extension/prompt_base.html
+++ b/extension/templates/extension/prompt_base.html
@@ -40,7 +40,7 @@
     {# compress js #}
 
     {% include_script 'js/jquery-1.10.2.min' %}
-    {# include_script 'extension/js/prompt' #}
+    {% include_script 'extension/js/prompt' %}
     
     {# endcompress #}
 </body>
