--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -14,19 +14,10 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
         <div class="active item preview">
-            <img class="carousel-image" src="/static/img/tutorial/ext-icon-signin.png">
-            <div class="carousel-caption">
-                <p> 
-                    Click the snake to log in and out or modify your settings.
-                </p>
-            </div>
-        </div>
-
-        <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/gmail-unlocked.png">
+            <img class="carousel-image" src="/static/img/tutorial/gmail-disabled.png">
             <div class="carousel-caption">
                 <p>
-                    Click the snake to encrypt your email.
+                  To start encrypting, <a href="/login">login</a> and add other ParselTongue users.
                 </p>
             </div>
         </div>        
@@ -34,7 +25,23 @@
             <img class="carousel-image" src="/static/img/tutorial/gmail-locked.png">
             <div class="carousel-caption">
                 <p>
-                    Click the lock again to send your email unencrypted.
+                    Click the snake to turn encryption on and off. 
+                </p>
+            </div>
+        </div>
+         <div class="item preview">
+            <img class="carousel-image" src="/static/img/tutorial/mobile.png">
+            <div class="carousel-caption">
+                <p>
+                  On devices without Parseltongue, this is how you'll see your emails.
+                </p>
+            </div>
+        </div>
+        <div class="item preview">
+            <img class="carousel-image" src="/static/img/tutorial/settings.png">
+            <div class="carousel-caption">
+                <p>
+                  Visit <a href="/settings">settings</a> to add other email addresses associated with your Gmail.
                 </p>
             </div>
         </div>
@@ -43,14 +50,6 @@
             <div class="carousel-caption">
                 <p>
                     Use the popup to make encryption a default.
-                </p>
-            </div>
-        </div>
-        <div class="item preview">
-            <img class="carousel-image" src="/static/img/tutorial/settings.png">
-            <div class="carousel-caption">
-                <p>
-                  Visit <a href="/settings">settings</a> to add other email addresses associated with your gmail.
                 </p>
             </div>
         </div>
