--- a/truespeak/templates/welcome.html
+++ b/truespeak/templates/welcome.html
@@ -9,14 +9,14 @@
 
     <div class="at-least full-width">
         <div>
-            <div class="welcome-text">
+            <div class="pull-left welcome-text">
                 Sending a confirmation email to:
                     {{ email_address }}
                 <br>
                 Redirecting to <a href="https://mail.google.com"> Gmail </a> in <span class="loading-time"> 5 </span> seconds.
 
             </div>
-            <div class="centered loading-gif-lg"/>
+            <div class="pull-left loading-gif-lg"/>
         </div>
     </div>
 
