--- a/truespeak/static/css/base.css
+++ b/truespeak/static/css/base.css
@@ -124,7 +124,7 @@ span.password-error-message {
 }
 
 .centered {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -50px;
