--- a/truespeak/templates/base.html
+++ b/truespeak/templates/base.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="/static/img/favicon.ico">
+        <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
         {# compress css #}
         {% include_style "css/bootstrap.min" %}
         {% include_style "css/base" %}
