--- a/truespeak/templates/settings.html
+++ b/truespeak/templates/settings.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load filters %}
+{% load staticfiles %}
 
 {% block css %}
     {% include_style "/static/css/settings" %}
