--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -20,19 +20,31 @@
                 </a>
             </li>
             <li>
-                <a href="#make">
-                    Who made ParselTongue? 
-                </a>
-            </li>
-            <li>
-                <a href="#trust">
-                    Why should I trust ParselTongue more than Google?
-                </a>
-            </li>
-            <li>
                 <a href="#downsides">
                     What are the downsides?
                 </a>
+                <ul class="nav">
+                    <li>
+                        <a href="#chrome-only"> 
+                            Only available in Chrome
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#no-search"> 
+                            Limited search
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#attachments"> 
+                            Attachments
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#password"> 
+                            No password recovery 
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="#tech">
@@ -40,8 +52,13 @@
                 </a>
                 <ul class="nav">
                     <li>
-                        <a href="#key-generation"> 
-                            Key Generation
+                        <a href="#design">
+                            Design
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#key-storage">
+                            Key Storage
                         </a>
                     </li>
                     <li>
@@ -50,12 +67,17 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#decryption"> 
-                            Decryption
+                        <a href="#open-source"> 
+                            Open Source
                         </a>
                     </li>
                 </ul>
 
+            </li>
+            <li>
+                <a href="#make">
+                    Who made ParselTongue? 
+                </a>
             </li>
         </ul>
     </div>
@@ -66,10 +88,10 @@
                 How do I use ParselTongue? 
             </h3>
             <p>
-                First, <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">install the ParselTongue Google Chrome Extension</a>.
+                First, <a href="https://chrome.google.com/webstore/detail/parseltongue/egpagjaeoilneaefepllapmajaoefcgd?hl=en&gl=US" target="_blank">get the extension</a>.
             </p>
             <p>
-                Second, <a href="/register/" target="_blank">register </a> any Gmail addresses that you would like to use with ParselTongue.
+                Second, <a href="/register/" target="_blank">register</a> the Gmail address that you would like to use with ParselTongue. If you have any other addresses that forward to your Gmail, or that you send from with Gmail, you can add those later on the <a href="/settings" target="_blank">settings page</a>.
             </p>
             <p>
                 That's <strong> all it takes to set it up. </strong> You can also check out the <a href="/tutorial"> tutorial </a> on how to get started.
@@ -78,91 +100,92 @@
             <h3 id="work"> 
                 How does ParselTongue Work? 
             </h3>
+
             <p>
-                ParselTongue is a Google Chrome extension which uses Javascript and a public key store to encrypt emails between ParselTongue users.
-            </p>
-            <p>
-                When you register for ParselTongue, your browser generates a public/private key pair.
-                Your private key is stored in the extension's local storage which is sandboxed from other domains and can only be accessed by the ParselTongue extension.
-                Your public key is uploaded to the ParselTongue public key server where other users have access to it.
-            <p>
-                ParselTongue then works on top of your Gmail to detect when you are emailing another ParselTongue user and encrypts your emails to other ParselTongue users using their public keys.
-                This encryption takes place in your browser, so plain text never gets sent through Google's servers, or onto the network at all. Even the drafts of your emails which Gmail autosaves will always be encrypted.
-            <p>
-                The cipher text that passes through the network is encrypted with a 1024 bit public key, meaning an adversary would be unable to decipher it unless they possess the correct private key.
-            </p>
-            <p>
-                When your intended recipient opens your email, ParselTongue uses the private key in their browser's local storage to seamlessly decrypt the email. You see plain text, and they see plain text, and no else can in between.
+                If you're interested in the system security and design, skip to the <a href="#tech">technical details</a>.
             </p>
 
-            <h3 id="make"> 
-                Who made ParselTongue? 
-            </h3>
             <p>
-                Stephanie Wang (MIT '15), Josh Blum (MIT '14), and Max Fowler (Brown '14). We originally built
-                ParselTongue for the NYC Facebook hackathon in the summer of 2013. Over the winter of 2014, we built it out to release. We think that ParselTongue can go a long way against blanket surveillance, and that client-side encryption should be the standard for private communication.
+                ParselTongue is a Google Chrome extension that protects your privacy by encrypting your emails to other ParselTongue users. This way, you and the recipients are the only ones who can read the emails. The extension works on top of Gmail to encrypt your emails when it detects that you are emailing another ParselTongue user. Encryption of your emails prevents Gmail and any other third parties, like the NSA, from reading the contents of your email, even if they have access to the email data. Even your drafts are auto-saved as encrypted text.
             </p>
 
-            <h3 id="trust"> 
-                Why should I trust ParselTongue more than Google?
-            </h3>
             <p>
-                The beauty of client-side encryption is you don't have to trust us. We don't store your password. We never have access to your private key.
-                The <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are both public on GitHub.
-                You could step through ParselTongue's code as it runs in your browser and trust in that.
+                When an email comes into your inbox, you will first see it with a tagline that it was encrypted by ParselTongue. Once you open the email, the extension decrypts any encrypted content so that you can view the original text, like you would any other email. All of the information needed to decrypt and view the original contents is already stored in the email &mdash; except for one final piece. This is your secret key, which can only be accessed by logging into the extension. 
+            </p>
+            <p>
+                All of the recipients of an email must be ParselTongue users in order for the extension to encrypt it. If you have multiple addresses that forward to your Gmail, or that you send from on Gmail, you can add these on the <a href="/settings" target="_blank">settings page</a>. 
             </p>
 
             <h3 id="downsides"> 
                 What are the downsides? 
             </h3>
+            <h4 id="chrome-only">
+               Only available in Chrome 
+            </h4>
             <p>
-                Because your ParselTongue encrypted emails are stored as cipher text on Google's servers, Gmail search won't be able to understand the contents of your emails (because it can't read them), but you will still be able to search
-                by email subject and recipient (which are not encrypted).
+                Since the ParselTongue extension is needed to decrypt your emails, you can only read encrypted emails from the Chrome browser. Unfortunately, this means that your emails won't be available on mobile or other browsers. 
             </p>
+            <h4 id="no-search">
+                Limited search 
+            </h4>
             <p>
-                Any browser you read your email from must have the ParselTongue extension installed in order to read the emails. Unfortunately, this also means your emails won't be available on mobile clients or browsers other than Chrome.
+                Because your ParselTongue emails are stored encrypted on Google's servers, Gmail search won't work on the contents of your emails. You can still search by email subject and recipient since these are not encrypted. On the bright side, this also means Gmail can no longer use your emails for targeted ads.
             </p>
+            <h4 id="attachments">
+                Attachments
+            </h4>
             <p>
-                Your password is not recoverable since it is used to encrypt your private key. If you forget it, the content of your emails will be lost.
+                Files attached to your email will not be encrypted. However, we encourage you to use <a href="https://www.passwordprotectmyfile.com/" target="_blank">passwordprotectmyfile.com</a>.
+            </p>
+            <h4 id="password">
+                No password recovery
+            </h4>
+            <p>
+                For security reasons, if you forget your password, you will not be able to recover or change it. This means that the contents of your encrypted emails, past and future, are lost. 
             </p>
 
             <h3 id="tech"> 
                 Technical Details
             </h3>
-            <h4 id="key-generation">
-                Key Generation
+            <h4 id="design">
+                Design
             </h4>
             <p>
-                Two types of keys are used in Parseltongue: 256 bit AES keys and 1024 bit RSA public/private key pairs.
+                ParselTongue works by assigning each person an RSA public/private key pair. Our server acts a public keystore, allowing you to encrypt for other ParselTongue users. When composing an email, we generate an AES key per-email to encrypt the email contents. The AES key is also stored in the email data, encrypted with the public keys of all users on the email thread, one encrypted copy of the AES key per user. The extension uses the user's RSA private key to decrypt the AES key in the email data, which it then uses to decrypt the email ciphertext.
+            </p>
+            <h4 id="key-storage">
+                Key Storage
+            </h4>
+            <p>
+                For each user, our server stores the RSA public and private keys. The public key is stored plaintext so that users can send encrypted messages to one another. Users can download other users' public keys through a GET request. The private key is stored AES-encrypted with the user's ParselTongue password so that the user still has access to the private key on other machines. The encrypted private key can only be downloaded when authenticated by the ParselTongue server. Once downloaded, the client requires the user's password to decrypt the private key.  
             </p>
             <p>
-                An AES key is generated during message composition using window.crypto. This is the key that is used to encrypt the message content (described below). One AES key is generated per message.
-            </p>
-            <p>
-                The RSA keys are generated by the <a href="https://github.com/wwwtyro/cryptico">cryptico library</a> during registration. The ParselTongue server stores the public key and user password AES encrypted private key. For this reason your user password is not recoverable.
-            </p>
-            <p>
-                When you install ParselTongue onto a new machine and login, your password-encrypted private key is pulled from the server, decrypted with your password, and then stored in Chrome local storage, allowing you to read all of your old messages that were encrypted for that key.
-            </p>
-            <p>
-                When you log out of ParselTongue, your private key is deleted from Chrome local storage. The encrypted version of your key still exists on the ParselTongue server so you can get your key back by logging in again. However, if you forget your password, your private
-                key cannot be decyrpted, and you will not be able to read old messages that were encrypted for that key. So remember your password!
-
+                The RSA public and private keys are stored plaintext in Chrome extension background page's local storage. The background page is sandboxed from any JavaScript that is not run by the extension itself. The background page is closed to any cross-extension API calls, protecting your private key from being leaked. When the user logs in to ParselTongue, the public and private keys are downloaded from the server over an SSL connection, and the private key is decrypted with the user's password. Upon logout, the authentication cookie and local storage are cleared. While the user is logged in, an attacker with access to the user's machine would be able to read local storage and therefore the private key.
             </p>
             <h4 id="encryption">
                 Encryption
             </h4>
             <p>
-                ParselTongue relies on both AES and RSA encryption. When you compose an email to another ParselTongue user, a random 256 bit shared secret is created and the message content is AES encrypted using this secret. The shared secret is then encrypted using the 1024 bit RSA public key of each person involved in the message. The blob of encrypted message content and encrypted secrets are sent together as the contents of the email.
+                AES and RSA keys are formed from random values, generated by an API call to <a href="https://developer.mozilla.org/en-US/docs/Web/API/window.crypto.getRandomValues"  target="_blank">window.crypto.getRandomValues</a>. We use a 256-bit AES key for email encryption and a 1024-bit RSA key pair per user. During registration, the RSA key pair is formed from the random values using the <a href="https://github.com/wwwtyro/cryptico" target="_blank">cryptico library</a> and uploaded to the ParselTongue server.
             </p>
             <p>
-                When you are composing a message with the extension installed you are actually typing into a overlay div so Gmail's original DOM elements never see the raw text of your email. Everything you type when encryption is active is encrypted on each keystroke so that autosaved drafts stored by Google will never contain plain text.
+                When encryption is turned on, ParselTongue adds an overlay to the email composition textarea. On each keystroke in the overlay, the contents are encrypted with a per-email AES key and set as the HTML of the original textarea. As long as encryption is turned on for the entirety of an email composition and send, even auto-saved drafts are stored as ciphertext.
             </p>
-            <h4 id="decryption">
-                Decryption
+            <p>
+                Our design is such that if a user's private key or password is discovered by an attacker, all emails would then be able to be decrypted. However, discovering a single email's AES key would not provide any information besides the plaintext of that email.
+            </p>
+            <h4 id="open-source">
+                Open Source
             </h4>
             <p>
-                ParselTongue uses the private key stored in the extension's local storage to  decrypt the AES secret sent as part of the message blob. Once decrypted, the AES secret is then used to decrypt the AES encrypted message, and the resulting plain text is shown to the user. Using the combination of AES and RSA encryption ParselTongue encrypted messages can be read by all participants without any participants sharing their private keys.
+                Both the <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and the <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are publically available on GitHub. Open an issue if any problems arise, or even better, send us a pull request. :)
+            </p>
+            <h3 id="make"> 
+                Who made ParselTongue? 
+            </h3>
+            <p>
+                Stephanie Wang (MIT '15), Josh Blum (MIT '14), and Max Fowler (Brown '14). Check out our <a href="/team" target="_blank">mugs</a>. We originally built
+                ParselTongue for the NYC Facebook hackathon in the summer of 2013. Over the winter of 2014, we built it out to release. We think that ParselTongue can go a long way against blanket surveillance, and that client-side encryption should be the standard for private communication.
             </p>
 
         </div>
