--- a/truespeak/templates/tutorial_snippet.html
+++ b/truespeak/templates/tutorial_snippet.html
@@ -18,7 +18,7 @@
             <img class="carousel-image" src="{% static "img/tutorial/gmail-disabled.png" %}">
             <div class="carousel-caption">
                 <p>
-                  To start encrypting, <a href="/login">login</a> and add other ParselTongue users.
+                  To start encrypting, <a href="/login">login</a> and compose to other ParselTongue users.
                 </p>
             </div>
         </div>        
