--- a/truespeak/templates/faq.html
+++ b/truespeak/templates/faq.html
@@ -178,7 +178,7 @@
                 Open Source
             </h4>
             <p>
-                Both the <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and the <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are publically available on GitHub. Open an issue if any problems arise, or even better, send us a pull request. :)
+                Both the <a href="https://github.com/maximusfowler/true-speak" target="_blank">public key server</a> and the <a href="https://github.com/joshblum/fakeblock" target="_blank">extension</a> are publicly available on GitHub. Open an issue if any problems arise, or even better, send us a pull request. :)
             </p>
             <h3 id="make"> 
                 Who made ParselTongue? 
